@@ -1,4 +1,4 @@
 
 NAME = 'Sinister Ducks'
-VERSION = '1.0.0'
+VERSION = '1.0.1'
 
