@@ -1,8 +1,8 @@
 
 from pyglet.text import Label
 
-from hudmessage import HudMessage
-from player import Player
+from .hudmessage import HudMessage
+from .player import Player
 
 
 class HudLives(HudMessage):
